[package]
name = "serde_tuple"
description = "De/serialize structs with named fields as array of values"
version = "1.1.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.64"

[features]
default = ["std"]
# Include support for std library. Without this feature, uses `no_std` attribute
std = []

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false }
serde_tuple_macros = { version = "1.1.1", path = "serde_tuple_macros" }

[dev-dependencies]
serde_json = "1.0.37"
derivative = "2"

[lints]
workspace = true

[workspace]
resolver = "2"
default-members = [".", "serde_tuple_macros"]

[workspace.package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
categories = ["encoding"]
edition = "2021"
keywords = ["serde", "tuple", "struct"]
license = "MIT"
repository = "https://github.com/kardeiz/serde_tuple"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# TODO: these should be cleaned up and removed
disallowed_names = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
needless_doctest_main = "allow"
