[package]
name = "serde_tuple_macros"
description = "Internal proc-macro crate for serde_tuple"
version = "1.0.1"
readme = "../README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[lints]
workspace = true
